# recogdrive

./: .gitignore  .mcp.json  .ralphrc  CLAUDE.md  README.md  justfile  requirements.md  run_mini_train.py  validate_config.py
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
configs/: __init__.py  default.yaml  mini.yaml  mini_qwen.yaml  stage1.yaml  stage2.yaml  stage3.yaml
configs/vlm/: internvl3_8b.yaml  qwen2_vl_7b.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.mini  docker-compose.yml  entrypoint.sh  run_multi_node.sh
docs/: Installation.md  Train_Eval.md
navsim/agents/recogdrive/: recogdrive_agent.py
qwenvl_chat/: README.md  pyproject.toml  qwenvl_chat.txt
qwenvl_chat/qwenvl/: __init__.py
qwenvl_chat/qwenvl/train/: __init__.py  qwenvl_chat_finetune.py
qwenvl_chat/shell/qwen2.5_vl/finetune/: qwen2.5_vl_7b_finetune_recogdrive_pretrain.sh
scripts/: run_mini_training.sh
src/recogdrive/: __init__.py  cli.py
src/recogdrive/agents/recogdrive/: recogdrive_backbone.py  recogdrive_features.py
src/recogdrive/config/: __init__.py  base.py  loader.py
src/recogdrive/dit/: __init__.py
src/recogdrive/evaluation/vqa_evaluation/DriveBench/inference/: internvl_lmdeploy.py
src/recogdrive/training/: __init__.py  stage1_vlm.py  stage2_dit.py  stage3_rl.py
src/recogdrive/vlm/: __init__.py  base.py  factory.py  internvl.py  qwen.py  registry.py
tests/: __init__.py  requirements.txt  test_recogdrive.py
