[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qwenvl_chat"
version = "1.0.0"
description = "Qwen2.5-VL fine-tuning for ReCogDrive project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=2", "torchvision>=0.15",
    "transformers==4.37.2", "tokenizers==0.15.1", "sentencepiece==0.1.99",
    "accelerate", "peft>=0.4.0", "bitsandbytes==0.41.0",
    "numpy", "scikit-learn>=1.2.2",
    "deepspeed>=0.13.5", "einops", "einops-exts", "timm==0.9.12",
    "qwen-vl-utils>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/QwenLM/Qwen2.5-VL"

[tool.setuptools.packages.find]
exclude = ["shell*", "tools*", "work_dirs*"]

[tool.wheel]
exclude = ["shell*", "tools*", "work_dirs*"]